_sass/_layout.scss
/* Site header */
.site-header {
  border-bottom: 1px solid $base2;
  min-height: $spacing-unit * 3;

  // Positioning context for the mobile navigation icon
  position: relative;
}

.site-title {
  color: $cyan;
  font-family: $head-font-family;
  font-size: $base-font-size;
  font-weight: 600;
  line-height: $spacing-unit * 3;
  margin-bottom: 0;
  float: left;
  text-transform: uppercase;
}

.site-nav {
  float: right;
  line-height: $spacing-unit * 3;

  .menu-icon {
    display: none;
  }

  .page-link {
    line-height: $base-line-height;

    // Gaps between nav items, but not on the first one
    &:not(:first-child) { margin-left: $spacing-unit; }
  }

  @include media-query($on-palm) {
    position: absolute;
    top: 9px;
    right: 30px;
    background-color: $base3;
    border: 1px solid $base2;
    border-radius: 5px;
    text-align: right;

    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg {
        width: 18px;
        height: 15px;

        path {
          fill: $base1;
        }
      }
    }

    .trigger {
        clear: both;
        display: none;
    }

    &:hover .trigger {
        display: block;
        padding-bottom: 5px;
    }

    .page-link {
        display: block;
        padding: 5px 10px;
    }
  }
}

/* About me on the home page */
.about-excerpt {
  
  border-bottom: 1px solid $base2;
  margin: ($spacing-unit * 2) 0;
  
  p {
    max-width: ($on-laptop + ($spacing-unit * 2)) / 1.618;
    text-align: center;
    margin: 0 auto;
  }
  img {
    text-align: center;
    margin-bottom: 0 auto $spacing-unit;
  }
}

/* Site footer */
.site-footer {
  border-top: 1px solid $base2;
  padding: $spacing-unit 0;
}

/* Page content */
.page-content {
  padding: $spacing-unit 0;
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }
}

.post-link {
  display: block;
  font-size: $base-font-size * 1.5;
}

/* Posts */
.post-header { margin-bottom: $spacing-unit; }

.post-title {
  font-size: $base-font-size * 1.5;
  line-height: 1;

  @include media-query($on-laptop) {
    font-size: $base-font-size * 1.5;
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2 {
    font-size: $base-font-size * 1.5;

    @include media-query($on-laptop) { font-size: $base-font-size * 1.5; }
  }
}

